--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "towards-ml-kem-and-ml-dsa-on-opentitan-dev-multi-cycle-bnmulv"]
-	path =dev-multi-cycle-bnmulv
+	path = towards-ml-kem-and-ml-dsa-on-opentitan-dev-multi-cycle-bnmulv
 	url = git@github.com:PQC-OpenTitan/towards-ml-kem-and-ml-dsa-on-opentitan-dev-multi-cycle-bnmulv.git
 [submodule "towards-ml-kem-and-ml-dsa-on-opentitan-dev-single-cycle-bnmulv"]
-	path = dev-single-cycle-bnmulv
+	path = towards-ml-kem-and-ml-dsa-on-opentitan-dev-single-cycle-bnmulv
 	url = git@github.com:PQC-OpenTitan/towards-ml-kem-and-ml-dsa-on-opentitan-dev-single-cycle-bnmulv.git
 [submodule "towards-ml-kem-and-ml-dsa-on-opentitan-ref-synth"]
-	path = ref-synth
+	path = towards-ml-kem-and-ml-dsa-on-opentitan-ref-synth
 	url = git@github.com:PQC-OpenTitan/towards-ml-kem-and-ml-dsa-on-opentitan-ref-synth.git
 [submodule "towards-ml-kem-and-ml-dsa-on-opentitan-dev-kmac-only"]
-	path = dev-kmac-only
+	path = towards-ml-kem-and-ml-dsa-on-opentitan-dev-kmac-only
 	url = git@github.com:PQC-OpenTitan/towards-ml-kem-and-ml-dsa-on-opentitan-dev-kmac-only.git
